<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragmentBodyPadding"
    tools:context=".ui.member_profile.MemberProfileFragment">

    <ImageView
        android:id="@+id/portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/labelUserPortrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/name"
        android:text="@string/labelName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portrait" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewPadding"
        android:text="@string/placeholderName"
        app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/roleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/action"
        android:text="@string/labelRole"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/viewPadding"
        android:text="@string/placeholderRole"
        app:layout_constraintBottom_toBottomOf="@+id/roleLabel"
        app:layout_constraintStart_toEndOf="@+id/roleLabel"
        app:layout_constraintTop_toTopOf="@+id/roleLabel" />

    <TextView
        android:id="@+id/imageGalleryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelStoredPictures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentEntries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/viewPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGalleryLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>